--- a/reactProject/rockpaperscissor/src/App.css
+++ b/reactProject/rockpaperscissor/src/App.css
@@ -37,10 +37,18 @@
 } */
 
 .box {
-  border: 1px solid black;
+  border: 4px solid black;
   width: 500px;
+  text-align: center;
+  font-size: 25px;
+  margin: 10px;
 }
 
 .item-img {
   width: 400px;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
 }
