--- a/reactProject/rockpaperscissor/src/App.css
+++ b/reactProject/rockpaperscissor/src/App.css
@@ -1,43 +1,5 @@
-/* .bixBox {
-  display: flex;
-  justify-content: space-evenly;
-  margin: 30px 0px 20px;
-  text-align: center;
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.youBox {
-  border: 4px solid black;
-  width: 600px;
-  height: 600px;
-  padding: 10px;
-}
-
-.computerBox {
-  border: 4px solid black;
-  width: 600px;
-  height: 600px;
-  padding: 10px;
-}
-
-.buttonBox {
-  display: flex;
-  justify-content: center;
-}
-
-.buttonBox button {
-  margin: 10px;
-}
-
-.resultBox {
-  text-align: center;
-  font-size: 25px;
-  font-weight: bold;
-} */
-
 .box {
-  border: 4px solid black;
+  border: 10px solid black;
   width: 500px;
   text-align: center;
   font-size: 25px;
@@ -51,4 +13,29 @@
 .main {
   display: flex;
   justify-content: center;
+}
+
+.win {
+  border: 10px solid green;
+  color: green;
+}
+
+.lose {
+  border: 10px solid red;
+  color: red;
+}
+
+.tie {
+  border: 10px solid black;
+  color: black;
+}
+
+.btn-img {
+  width: 40px;
+  height: 40px;
+}
+
+.result2 {
+  border: none;
+  text-align: center;
 }
