--- a/reactProject/hnm-react-router-practice/src/App.css
+++ b/reactProject/hnm-react-router-practice/src/App.css
@@ -1,69 +1,58 @@
 /* 메뉴바 */
 .menubar {
-  list-style-type: none;
   display: flex;
-  flex-wrap: wrap;
+  list-style-type: none;
 }
 
 /* 메뉴바 list */
 .menubar li {
-  margin: 10px;
+  padding: 10px;
 }
 
-/* 메뉴바 컨테이너 */
-.menubar-container {
+/* 메뉴바 로고 */
+.menu-logo {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-/* 메뉴바 h1 */
-.menubar-container h1 {
-  color: red;
-}
-
-/* 제품 영역 */
-.products-div {
-  width: 25vw;
-  height: 50vh;
-  margin: 10px;
-  text-align: center;
-}
-
-/* 제품 컨테이너 */
-.products-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-  width: 100vw;
-  height: 70vh;
-}
-
-/* main */
-.main-container {
-  width: 100vw;
-  height: 100vh;
-}
-
-/* 제품 사진 */
-.product-img {
-  display: block;
-  margin: auto;
-  width: 300px;
-  height: 400px;
-}
-
-/* 로그인버튼 */
-.login-btn {
-  margin-left: 800px;
 }
 
 /* 로그인 컨테이너 */
 .login-container {
   display: flex;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: end;
-  width: 90vw;
+  margin: 20px;
+  cursor: pointer;
+}
+
+.menu-area {
+  display: flex;
+  justify-content: center;
+}
+
+.search-area {
+  border-bottom: 1px solid black;
+  position: absolute;
+  right: 20px;
+}
+
+.search-area input {
+  border: none;
+}
+
+.product-img {
+  width: 300px;
+  height: 400px;
+}
+
+.choice-new {
+  font-size: 0.7rem;
+}
+
+.productCard:hover {
+  transform: scale(1.1);
+}
+
+.login-form {
+  margin: 0 auto;
+  width: 600px;
 }
