--- a/reactProject/hnm-react-router-practice/src/App.css
+++ b/reactProject/hnm-react-router-practice/src/App.css
@@ -73,3 +73,39 @@
 .product-data div {
   margin: 20px 0;
 }
+
+.side-menubar {
+  display: flex;
+  position: fixed;
+  width: 200px;
+  height: 100%;
+  background-color: burlywood;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  transition: 0.5s;
+}
+.side-exit {
+  position: absolute;
+  right: 10px;
+  z-index: 1;
+  margin: 15px;
+}
+
+.side-menubar li {
+  margin-top: 10px;
+  padding: 10px;
+  list-style-type: none;
+}
+
+.side-button {
+  position: relative;
+  width: 100px;
+  margin-left: 10px;
+}
+
+.top-area {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
